fix: Settings secties volledig vertaald
- SettingsPage.tsx: Invoice, Email, AI tabs vertaald
- LeaveSettingsPage.tsx: alle labels vertaald (was al deels klaar)
- PushSettingsTab.tsx: push notificatie instellingen vertaald
- nl.json/en.json: 50+ nieuwe vertaalsleutels toegevoegd
  - Invoice number settings, payment text, SMTP settings
  - AI provider options, model selection
  - Push notification providers, VAPID configuration
  - Firebase setup instructions

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -81,6 +81,7 @@
     "details": "Details",
     "info": "Information",
     "warning": "Warning",
+    "seconds": "seconds",
     "or": "or",
     "and": "and",
     "per": "per",
@@ -774,7 +775,80 @@
     "sidebar": "Sidebar",
     "primary": "Primary",
     "background": "Background",
-    "accent": "Accent"
+    "accent": "Accent",
+    "paymentText": "Payment text",
+    "availableVariables": "Available variables",
+    "example": "Example",
+    "invoiceNumberSettings": "Invoice Number Settings",
+    "invoiceNumberDescription": "Set the starting number for new invoices. The system automatically chooses the highest number (existing or starting number). Format: TYPE-YEAR-NUMBER (e.g. F-2026-0001).",
+    "startNumberSales": "Starting Number Sales Invoices (F-)",
+    "startNumberPurchase": "Starting Number Purchase Invoices (I-)",
+    "startNumberCredit": "Starting Number Credit Invoices (C-)",
+    "exampleFormat": "E.g",
+    "invoiceNumberWarning": "The starting number is only used if no invoices of this type exist yet, or if the starting number is higher than the current highest number.",
+    "smtpHost": "SMTP Host",
+    "smtpPort": "SMTP Port",
+    "senderEmail": "Sender Email",
+    "useTls": "Use TLS",
+    "oauthMicrosoft": "OAuth / Microsoft 365",
+    "oauthDescription": "Optional: Use OAuth for Microsoft Exchange Online.",
+    "enableOauth": "Enable OAuth",
+    "emailSignature": "Email Signature",
+    "emailSignatureDescription": "This signature will be added at the bottom of all outgoing emails (e.g. invoices).",
+    "testEmail": "Test Email",
+    "testEmailDescription": "Send a test email to verify the configuration.",
+    "sendTest": "Send test",
+    "aiInvoiceExtraction": "AI Invoice Extraction",
+    "aiDescription": "Configure AI-powered extraction for automatic invoice data recognition.",
+    "aiProvider": "AI Provider",
+    "disabled": "Disabled",
+    "githubModelsFree": "GitHub Models (Free)",
+    "openaiPaid": "OpenAI (Paid)",
+    "azureOpenai": "Azure OpenAI",
+    "githubRecommended": "GitHub Models is free and recommended for most users.",
+    "rateLimit": "Rate Limit",
+    "rateLimitDescription": "GitHub Models has a limit of 150 requests per day and 15 requests per minute. With many invoice imports, this limit can be reached quickly.",
+    "unlimitedUsage": "For unlimited usage, consider OpenAI or Azure OpenAI.",
+    "githubToken": "GitHub Personal Access Token",
+    "createTokenAt": "Create a token at",
+    "withModelsPermission": "with \"models\" permission.",
+    "availableAt": "Available at",
+    "endpointUrl": "Endpoint URL",
+    "deploymentName": "Deployment Name",
+    "model": "Model",
+    "modelFast": "GPT-4o Mini (Fast, cheap)",
+    "modelBest": "GPT-4o (Best quality)",
+    "serverName": "Server Name",
+    "status": "Status",
+    "connected": "Connected",
+    "useOtherServer": "Use another server",
+    "useOtherServerDescription": "To use another server, you must log out and reconfigure the app.",
+    "defaultVacationHours": "Default vacation hours per year",
+    "defaultVacationHoursHint": "Default: 216 hours",
+    "workWeekHours": "Work week hours",
+    "workWeekHoursHint": "Hours above this amount = overtime",
+    "overtimePercentage": "Overtime percentage for leave (%)",
+    "overtimePercentageHint": "How much % of overtime can be taken as leave",
+    "freeSpecialLeave": "Free special leave per month (hours)",
+    "freeSpecialLeaveHint": "Extra hours are deducted from vacation",
+    "defaultVacationHoursShort": "Default vacation hours",
+    "overtimeLeavePercentage": "Overtime % for leave",
+    "freeSpecialLeaveShort": "Free special leave",
+    "hour": "hour",
+    "pushSettings": "Push Notification Settings",
+    "pushProvider": "Push Provider",
+    "webPush": "Web Push (VAPID)",
+    "firebase": "Firebase Cloud Messaging",
+    "vapidKeys": "VAPID Keys",
+    "generateKeys": "Generate keys",
+    "generatingKeys": "Generating keys...",
+    "keysGenerated": "VAPID keys generated! Don't forget to save.",
+    "publicKey": "Public Key",
+    "privateKey": "Private Key",
+    "adminEmail": "Admin Email",
+    "pollInterval": "Poll Interval (seconds)",
+    "couldNotLoadPushSettings": "Could not load push settings",
+    "couldNotGenerateKeys": "Could not generate VAPID keys"
   },
   "notifications": {
     "title": "Notifications",
@@ -786,6 +860,14 @@
     "settings": "Notification settings",
     "email": "Email notifications",
     "push": "Push notifications",
+    "pushConfigured": "Push notifications are configured",
+    "pushNotConfigured": "Push notifications are not configured yet",
+    "pollIntervalHint": "How often the app fetches new notifications (5-300 seconds). Lower values = faster updates but more server load.",
+    "noPushNotifications": "No push notifications",
+    "webPushRecommended": "Recommended - works in all modern browsers",
+    "firebaseLegacy": "Google Firebase (legacy)",
+    "vapidConfiguration": "VAPID Configuration",
+    "generateNewKeys": "Generate New Keys",
     "createNotification": "Create notification",
     "sendNotification": "Send notification",
     "recipients": "Recipients",
@@ -816,6 +898,22 @@
     "sendError": "Could not send notification",
     "loadGroupDetailsError": "Could not load group details",
     "membersCount": "{{count}} members",
+    "contactAddress": "Contact address for push service providers",
+    "encryptedStored": "(encrypted stored)",
+    "enterPrivateKey": "Enter private key...",
+    "encryptedInDatabase": "Encrypted stored in the database",
+    "howWebPushWorks": "How does Web Push work?",
+    "vapidAutoGenerated": "VAPID keys are automatically generated",
+    "worksInBrowsers": "Works in Chrome, Firefox, Edge and Safari (macOS 13+)",
+    "noExternalService": "No external service needed - everything is processed locally",
+    "freePrivacy": "Free and privacy-friendly",
+    "firebaseConfiguration": "Firebase Configuration",
+    "firebaseSetup": "Firebase setup",
+    "firebaseStep1": "Go to the",
+    "firebaseStep2": "Create a new project or select an existing project",
+    "firebaseStep3": "Go to Project Settings → Cloud Messaging",
+    "firebaseStep4": "Copy the Server Key and Sender ID",
+    "enterApiKey": "Enter API key...",
     "schedulesCount": "{{count}} schedules",
     "manageMembers": "Manage members",
     "membersOf": "Members of {{name}}",
