--- a/frontend/src/i18n/locales/nl.json
+++ b/frontend/src/i18n/locales/nl.json
@@ -81,6 +81,7 @@
     "details": "Details",
     "info": "Informatie",
     "warning": "Waarschuwing",
+    "seconds": "seconden",
     "or": "of",
     "and": "en",
     "per": "per",
@@ -774,7 +775,80 @@
     "sidebar": "Sidebar",
     "primary": "Primair",
     "background": "Achtergrond",
-    "accent": "Accent"
+    "accent": "Accent",
+    "paymentText": "Betalingstekst",
+    "availableVariables": "Beschikbare variabelen",
+    "example": "Voorbeeld",
+    "invoiceNumberSettings": "Factuurnummer Instellingen",
+    "invoiceNumberDescription": "Stel het startnummer in voor nieuwe facturen. Het systeem kiest automatisch het hoogste nummer (bestaand of startnummer). Formaat: TYPE-JAAR-NUMMER (bijv. F-2026-0001).",
+    "startNumberSales": "Startnummer Verkoopfacturen (F-)",
+    "startNumberPurchase": "Startnummer Inkoopfacturen (I-)",
+    "startNumberCredit": "Startnummer Creditfacturen (C-)",
+    "exampleFormat": "Bijv",
+    "invoiceNumberWarning": "Het startnummer wordt alleen gebruikt als er nog geen facturen van dit type bestaan, of als het startnummer hoger is dan het huidige hoogste nummer.",
+    "smtpHost": "SMTP Host",
+    "smtpPort": "SMTP Poort",
+    "senderEmail": "Afzender E-mail",
+    "useTls": "Gebruik TLS",
+    "oauthMicrosoft": "OAuth / Microsoft 365",
+    "oauthDescription": "Optioneel: Gebruik OAuth voor Microsoft Exchange Online.",
+    "enableOauth": "OAuth inschakelen",
+    "emailSignature": "E-mail Handtekening",
+    "emailSignatureDescription": "Deze handtekening wordt onderaan alle uitgaande e-mails (bijv. facturen) toegevoegd.",
+    "testEmail": "E-mail Testen",
+    "testEmailDescription": "Verstuur een test e-mail om de configuratie te controleren.",
+    "sendTest": "Test versturen",
+    "aiInvoiceExtraction": "AI Factuur Extractie",
+    "aiDescription": "Configureer AI-powered extractie voor het automatisch herkennen van factuurgegevens.",
+    "aiProvider": "AI Provider",
+    "disabled": "Uitgeschakeld",
+    "githubModelsFree": "GitHub Models (Gratis)",
+    "openaiPaid": "OpenAI (Betaald)",
+    "azureOpenai": "Azure OpenAI",
+    "githubRecommended": "GitHub Models is gratis en aanbevolen voor de meeste gebruikers.",
+    "rateLimit": "Rate Limiet",
+    "rateLimitDescription": "GitHub Models heeft een limiet van 150 requests per dag en 15 requests per minuut. Bij veel factuur imports kan deze limiet snel bereikt worden.",
+    "unlimitedUsage": "Voor onbeperkt gebruik, overweeg OpenAI of Azure OpenAI.",
+    "githubToken": "GitHub Personal Access Token",
+    "createTokenAt": "Maak een token op",
+    "withModelsPermission": "met \"models\" permissie.",
+    "availableAt": "Verkrijgbaar op",
+    "endpointUrl": "Endpoint URL",
+    "deploymentName": "Deployment Name",
+    "model": "Model",
+    "modelFast": "GPT-4o Mini (Snel, goedkoop)",
+    "modelBest": "GPT-4o (Beste kwaliteit)",
+    "serverName": "Server Naam",
+    "status": "Status",
+    "connected": "Verbonden",
+    "useOtherServer": "Andere server gebruiken",
+    "useOtherServerDescription": "Om een andere server te gebruiken moet je uitloggen en de app opnieuw configureren.",
+    "defaultVacationHours": "Standaard vakantie-uren per jaar",
+    "defaultVacationHoursHint": "Standaard: 216 uur",
+    "workWeekHours": "Werkweek uren",
+    "workWeekHoursHint": "Uren boven dit aantal = overwerk",
+    "overtimePercentage": "Overwerk percentage voor verlof (%)",
+    "overtimePercentageHint": "Hoeveel % van overwerk als verlof opneembaar is",
+    "freeSpecialLeave": "Gratis bijzonder verlof per maand (uren)",
+    "freeSpecialLeaveHint": "Extra uren worden van vakantie afgetrokken",
+    "defaultVacationHoursShort": "Standaard vakantie-uren",
+    "overtimeLeavePercentage": "Overwerk % voor verlof",
+    "freeSpecialLeaveShort": "Gratis bijzonder verlof",
+    "hour": "uur",
+    "pushSettings": "Push Notificatie Instellingen",
+    "pushProvider": "Push Provider",
+    "webPush": "Web Push (VAPID)",
+    "firebase": "Firebase Cloud Messaging",
+    "vapidKeys": "VAPID Keys",
+    "generateKeys": "Keys genereren",
+    "generatingKeys": "Keys genereren...",
+    "keysGenerated": "VAPID keys gegenereerd! Vergeet niet op te slaan.",
+    "publicKey": "Publieke Key",
+    "privateKey": "Private Key",
+    "adminEmail": "Admin E-mail",
+    "pollInterval": "Poll Interval (seconden)",
+    "couldNotLoadPushSettings": "Kon push instellingen niet laden",
+    "couldNotGenerateKeys": "Kon VAPID keys niet genereren"
   },
   "notifications": {
     "title": "Notificaties",
@@ -786,6 +860,14 @@
     "settings": "Notificatie-instellingen",
     "email": "E-mail notificaties",
     "push": "Push notificaties",
+    "pushConfigured": "Push notificaties zijn geconfigureerd",
+    "pushNotConfigured": "Push notificaties zijn nog niet geconfigureerd",
+    "pollIntervalHint": "Hoe vaak de app nieuwe notificaties ophaalt (5-300 seconden). Lagere waarden = snellere updates maar meer serverkracht.",
+    "noPushNotifications": "Geen push notificaties",
+    "webPushRecommended": "Aanbevolen - werkt in alle moderne browsers",
+    "firebaseLegacy": "Google Firebase (legacy)",
+    "vapidConfiguration": "VAPID Configuratie",
+    "generateNewKeys": "Nieuwe Keys Genereren",
     "createNotification": "Notificatie aanmaken",
     "sendNotification": "Notificatie versturen",
     "recipients": "Ontvangers",
@@ -816,6 +898,22 @@
     "sendError": "Kon notificatie niet verzenden",
     "loadGroupDetailsError": "Kon groep details niet laden",
     "membersCount": "{{count}} leden",
+    "contactAddress": "Contactadres voor push service providers",
+    "encryptedStored": "(versleuteld opgeslagen)",
+    "enterPrivateKey": "Voer private key in...",
+    "encryptedInDatabase": "Wordt versleuteld opgeslagen in de database",
+    "howWebPushWorks": "Hoe werkt Web Push?",
+    "vapidAutoGenerated": "VAPID keys worden automatisch gegenereerd",
+    "worksInBrowsers": "Werkt in Chrome, Firefox, Edge en Safari (macOS 13+)",
+    "noExternalService": "Geen externe dienst nodig - alles wordt lokaal verwerkt",
+    "freePrivacy": "Gratis en privacy-vriendelijk",
+    "firebaseConfiguration": "Firebase Configuratie",
+    "firebaseSetup": "Firebase instellen",
+    "firebaseStep1": "Ga naar de",
+    "firebaseStep2": "Maak een nieuw project of selecteer een bestaand project",
+    "firebaseStep3": "Ga naar Project Settings → Cloud Messaging",
+    "firebaseStep4": "Kopieer de Server Key en Sender ID",
+    "enterApiKey": "Voer API key in...",
     "schedulesCount": "{{count}} schema's",
     "manageMembers": "Leden beheren",
     "membersOf": "Leden van {{name}}",
