--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -724,6 +724,8 @@
     "logo": "Logo",
     "favicon": "Favicon",
     "primaryColor": "Primary color",
+    "loginBackgroundColor": "Login background color",
+    "loginBackgroundColorHint": "The background color of the login screen",
     "sidebarColor": "Sidebar color",
     "language": "Language",
     "dutch": "Dutch",
