--- a/frontend/src/i18n/locales/nl.json
+++ b/frontend/src/i18n/locales/nl.json
@@ -724,6 +724,8 @@
     "logo": "Logo",
     "favicon": "Favicon",
     "primaryColor": "Primaire kleur",
+    "loginBackgroundColor": "Login achtergrondkleur",
+    "loginBackgroundColorHint": "De achtergrondkleur van het inlogscherm",
     "sidebarColor": "Zijbalk kleur",
     "language": "Taal",
     "dutch": "Nederlands",
