feat: Admin kan concept uren zien + pagination fix + activity log fix
- Backend: Admin kan nu concept uren van chauffeurs zien in TimeEntryViewSet
- Frontend: Status filter toegevoegd op SubmittedHoursPage (Alle/Concept/Ingediend)
- Fix: SafePageNumberPagination voorkomt 404 bij ongeldige paginanummers
- Fix: User update logging verwijderd uit signals (veroorzaakte phantom activiteit)
- Local dev: VITE_ALLOW_LOCALHOST build arg ondersteund

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -327,6 +327,7 @@
     "noEntriesForWeek": "No hours registered for this week yet",
     "noSubmittedHours": "No submitted hours found",
     "noSubmittedHoursForWeek": "No submitted hours for this week",
+    "allStatuses": "All statuses",
     "addFirstEntry": "Add your first entry",
     "addDay": "Add day",
     "selectWeek": "Select week",
