--- a/frontend/src/i18n/locales/nl.json
+++ b/frontend/src/i18n/locales/nl.json
@@ -327,6 +327,7 @@
     "noEntriesForWeek": "Nog geen uren geregistreerd voor deze week",
     "noSubmittedHours": "Geen ingediende uren gevonden",
     "noSubmittedHoursForWeek": "Geen ingediende uren voor deze week",
+    "allStatuses": "Alle statussen",
     "addFirstEntry": "Voeg je eerste registratie toe",
     "addDay": "Dag toevoegen",
     "selectWeek": "Selecteer week",
