--- a/frontend/src/i18n/locales/nl.json
+++ b/frontend/src/i18n/locales/nl.json
@@ -355,7 +355,6 @@
     "filterByUser": "Filter op gebruiker",
     "allUsers": "Alle gebruikers",
     "filterByStatus": "Filter op status",
-    "allStatuses": "Alle statussen",
     "currentWeek": "Huidige week",
     "forWeek": "voor week",
     "with": "met",
@@ -567,11 +566,35 @@
     "noTemplate": "Geen template",
     "generateFromHours": "Genereer vanuit uren",
     "importInvoice": "Factuur importeren",
+    "importHours": "Uren importeren",
     "searchInvoices": "Zoek facturen...",
     "filterByStatus": "Filter op status",
     "filterByCompany": "Filter op bedrijf",
     "allStatuses": "Alle statussen",
-    "allCompanies": "Alle bedrijven"
+    "allCompanies": "Alle bedrijven",
+    "selectTemplateError": "Selecteer eerst een template",
+    "selectCompanyError": "Selecteer eerst een bedrijf",
+    "addLineError": "Voeg minstens één regel toe",
+    "creditInvoice": "Creditfactuur",
+    "optionalNotes": "Optionele notities...",
+    "noLinesYet": "Nog geen factuurregels",
+    "clickToAddLines": "Klik op 'Regel toevoegen' om te beginnen",
+    "sales": "Verkoop",
+    "purchase": "Inkoop",
+    "credit": "Credit",
+    "definitive": "Definitief",
+    "makeDefinitive": "Definitief maken",
+    "deleteInvoice": "Factuur verwijderen",
+    "deleteMultiple": "facturen verwijderen",
+    "sendInvoiceDescription": "Verstuur factuur per e-mail naar",
+    "smtpNote": "Let op: SMTP moet geconfigureerd zijn voor het versturen van e-mails",
+    "deleteLineConfirm": "Weet u zeker dat u deze regel wilt verwijderen?",
+    "lineDeleted": "Regel verwijderd",
+    "newLine": "Nieuwe regel",
+    "lineAdded": "Regel toegevoegd",
+    "notFound": "Factuur niet gevonden",
+    "backToOverview": "Terug naar overzicht",
+    "noLines": "Geen factuurregels"
   },
   "templates": {
     "title": "Factuur Templates",
@@ -582,6 +605,7 @@
     "description": "Beschrijving",
     "content": "Inhoud",
     "noTemplates": "Geen templates gevonden",
+    "createFirstTemplate": "Maak een eerste template",
     "templateCreated": "Template succesvol aangemaakt",
     "templateUpdated": "Template succesvol bijgewerkt",
     "templateDeleted": "Template succesvol verwijderd",
