--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -233,7 +233,23 @@
     "companyCreated": "Company successfully created",
     "companyUpdated": "Company successfully updated",
     "companyDeleted": "Company successfully deleted",
-    "allCompanies": "All companies"
+    "allCompanies": "All companies",
+    "mailingList": "Mailing list",
+    "mailingListDescription": "Manage contacts for sending invoices",
+    "addContact": "Add contact",
+    "editContact": "Edit contact",
+    "deleteContact": "Delete contact",
+    "deleteContactConfirm": "Are you sure you want to delete this contact?",
+    "contactName": "Name",
+    "contactEmail": "Email address",
+    "contactFunction": "Function",
+    "contactActive": "Active",
+    "noContacts": "No contacts in the mailing list",
+    "addFirstContact": "Add a contact to send invoices to",
+    "contactCreated": "Contact successfully added",
+    "contactUpdated": "Contact successfully updated",
+    "contactDeleted": "Contact successfully deleted",
+    "contacts": "contacts"
   },
   "drivers": {
     "title": "Drivers",
@@ -587,6 +603,12 @@
     "deleteInvoice": "Delete invoice",
     "deleteMultiple": "invoices to delete",
     "sendInvoiceDescription": "Send invoice by email to",
+    "useMailingList": "Use mailing list",
+    "selectRecipients": "Select recipients",
+    "manualEmail": "Manual email address",
+    "mailingListEmpty": "No contacts in the mailing list for this company",
+    "selectedRecipients": "Selected recipients",
+    "noRecipientsSelected": "Select at least one recipient",
     "smtpNote": "Note: SMTP must be configured to send emails",
     "deleteLineConfirm": "Are you sure you want to delete this line?",
     "lineDeleted": "Line deleted",
