--- a/frontend/src/i18n/locales/nl.json
+++ b/frontend/src/i18n/locales/nl.json
@@ -233,7 +233,23 @@
     "companyCreated": "Bedrijf succesvol aangemaakt",
     "companyUpdated": "Bedrijf succesvol bijgewerkt",
     "companyDeleted": "Bedrijf succesvol verwijderd",
-    "allCompanies": "Alle bedrijven"
+    "allCompanies": "Alle bedrijven",
+    "mailingList": "Mailinglijst",
+    "mailingListDescription": "Beheer de contactpersonen voor het versturen van facturen",
+    "addContact": "Contact toevoegen",
+    "editContact": "Contact bewerken",
+    "deleteContact": "Contact verwijderen",
+    "deleteContactConfirm": "Weet u zeker dat u dit contact wilt verwijderen?",
+    "contactName": "Naam",
+    "contactEmail": "E-mailadres",
+    "contactFunction": "Functie",
+    "contactActive": "Actief",
+    "noContacts": "Geen contacten in de mailinglijst",
+    "addFirstContact": "Voeg een contact toe om facturen naar te versturen",
+    "contactCreated": "Contact succesvol toegevoegd",
+    "contactUpdated": "Contact succesvol bijgewerkt",
+    "contactDeleted": "Contact succesvol verwijderd",
+    "contacts": "contacten"
   },
   "drivers": {
     "title": "Chauffeurs",
@@ -587,6 +603,12 @@
     "deleteInvoice": "Factuur verwijderen",
     "deleteMultiple": "facturen verwijderen",
     "sendInvoiceDescription": "Verstuur factuur per e-mail naar",
+    "useMailingList": "Gebruik mailinglijst",
+    "selectRecipients": "Selecteer ontvangers",
+    "manualEmail": "Handmatig e-mailadres",
+    "mailingListEmpty": "Geen contacten in de mailinglijst van dit bedrijf",
+    "selectedRecipients": "Geselecteerde ontvangers",
+    "noRecipientsSelected": "Selecteer minstens één ontvanger",
     "smtpNote": "Let op: SMTP moet geconfigureerd zijn voor het versturen van e-mails",
     "deleteLineConfirm": "Weet u zeker dat u deze regel wilt verwijderen?",
     "lineDeleted": "Regel verwijderd",
