--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -162,6 +162,7 @@
     "invoiceTemplates": "Invoice Templates",
     "invoiceImport": "Invoice Import",
     "revenue": "Revenue",
+    "spreadsheets": "Trip Registration",
     "users": "Users",
     "settings": "Settings",
     "profile": "Profile"
@@ -1356,5 +1357,80 @@
     "cyan": "Cyan (Turquoise)",
     "slate": "Slate (Dark)",
     "dark": "Dark Mode"
+  },
+  "spreadsheets": {
+    "title": "Trip Registration",
+    "newSpreadsheet": "New registration",
+    "editSpreadsheet": "Edit registration",
+    "deleteSpreadsheet": "Delete registration",
+    "deleteConfirm": "Are you sure you want to delete this registration?",
+    "spreadsheetCreated": "Registration created",
+    "spreadsheetUpdated": "Registration saved",
+    "spreadsheetDeleted": "Registration deleted",
+    "spreadsheetDuplicated": "Registration duplicated",
+    "noSpreadsheets": "No registrations found",
+    "noSpreadsheetsDesc": "Create a new trip registration to get started.",
+    "updatedAt": "Last modified",
+    "addFirstSpreadsheet": "Create your first trip registration",
+    "name": "Name",
+    "company": "Company",
+    "week": "Week",
+    "year": "Year",
+    "ratePerHour": "Rate per hour",
+    "ratePerKm": "Rate per km",
+    "rateDot": "Rate DOT",
+    "totalInvoice": "Total invoice",
+    "tripNumber": "Trip no.",
+    "sequenceNumber": "Seq. no.",
+    "driver": "Driver",
+    "date": "Date",
+    "startTime": "Start",
+    "endTime": "End",
+    "totalTime": "Total",
+    "breakTime": "Break",
+    "correction": "Correction",
+    "totalHours": "Total hours",
+    "startKm": "Start KM",
+    "endKm": "End KM",
+    "totalKm": "Total KM",
+    "rateHour": "Rate hour",
+    "rateKm": "Rate km",
+    "subtotal": "Subtotal",
+    "dot": "DOT",
+    "overnight": "Overnight",
+    "otherCosts": "Other costs",
+    "rowTotal": "Row total",
+    "addRow": "Add row",
+    "deleteRow": "Delete row",
+    "notes": "Notes",
+    "backToList": "Back to overview",
+    "duplicate": "Duplicate",
+    "exportXlsx": "Export XLSX",
+    "sendEmail": "Send email",
+    "emailSent": "Email sent",
+    "selectCompany": "Select company",
+    "settings": "Settings",
+    "rows": "Rows",
+    "createdBy": "Created by",
+    "lastModified": "Last modified",
+    "total": "Total",
+    "importHours": "Import hours",
+    "importDescription": "Select a week to import driver time entries",
+    "importMode": "Import mode",
+    "importAppend": "Append to existing rows",
+    "importReplace": "Replace existing rows",
+    "importConfirm": "Import",
+    "noTimeEntries": "No time entries found",
+    "entriesFound": "entries found",
+    "selectWeek": "Select week",
+    "noWeeksAvailable": "No weeks with time entries found",
+    "week": "Week",
+    "period": "Period",
+    "drivers": "Drivers",
+    "entries": "Entries",
+    "totalHours": "Total hours",
+    "totalKm": "Total km",
+    "backToWeeks": "Back to weeks",
+    "loadingWeeks": "Loading weeks..."
   }
 }
