--- a/frontend/src/i18n/locales/nl.json
+++ b/frontend/src/i18n/locales/nl.json
@@ -162,6 +162,7 @@
     "invoiceTemplates": "Factuur Templates",
     "invoiceImport": "Factuur Import",
     "revenue": "Omzet",
+    "spreadsheets": "Ritregistratie",
     "users": "Gebruikers",
     "settings": "Instellingen",
     "profile": "Profiel"
@@ -1356,5 +1357,80 @@
     "cyan": "Cyaan (Turquoise)",
     "slate": "Leisteen (Donker)",
     "dark": "Donker Modus"
+  },
+  "spreadsheets": {
+    "title": "Ritregistratie",
+    "newSpreadsheet": "Nieuwe registratie",
+    "editSpreadsheet": "Registratie bewerken",
+    "deleteSpreadsheet": "Registratie verwijderen",
+    "deleteConfirm": "Weet je zeker dat je deze registratie wilt verwijderen?",
+    "spreadsheetCreated": "Registratie aangemaakt",
+    "spreadsheetUpdated": "Registratie opgeslagen",
+    "spreadsheetDeleted": "Registratie verwijderd",
+    "spreadsheetDuplicated": "Registratie gedupliceerd",
+    "noSpreadsheets": "Geen registraties gevonden",
+    "noSpreadsheetsDesc": "Maak een nieuwe ritregistratie aan om te beginnen.",
+    "updatedAt": "Laatst gewijzigd",
+    "addFirstSpreadsheet": "Maak je eerste ritregistratie aan",
+    "name": "Naam",
+    "company": "Bedrijf",
+    "week": "Week",
+    "year": "Jaar",
+    "ratePerHour": "Tarief per uur",
+    "ratePerKm": "Tarief per km",
+    "rateDot": "Tarief DOT",
+    "totalInvoice": "Totaal factuur",
+    "tripNumber": "Ritnr",
+    "sequenceNumber": "Volgnr",
+    "driver": "Chauffeur",
+    "date": "Datum",
+    "startTime": "Begin",
+    "endTime": "Eind",
+    "totalTime": "Totaal",
+    "breakTime": "Pauze",
+    "correction": "Correctie",
+    "totalHours": "Totaal uren",
+    "startKm": "Begin KM",
+    "endKm": "Eind KM",
+    "totalKm": "Totaal KM",
+    "rateHour": "Tarief uur",
+    "rateKm": "Tarief km",
+    "subtotal": "Subtotaal",
+    "dot": "DOT",
+    "overnight": "Overnachting",
+    "otherCosts": "Overige kosten",
+    "rowTotal": "Rij totaal",
+    "addRow": "Rij toevoegen",
+    "deleteRow": "Rij verwijderen",
+    "notes": "Notities",
+    "backToList": "Terug naar overzicht",
+    "duplicate": "Dupliceren",
+    "exportXlsx": "Exporteer XLSX",
+    "sendEmail": "Verstuur per e-mail",
+    "emailSent": "E-mail verzonden",
+    "selectCompany": "Selecteer bedrijf",
+    "settings": "Instellingen",
+    "rows": "Rijen",
+    "createdBy": "Aangemaakt door",
+    "lastModified": "Laatst gewijzigd",
+    "total": "Totaal",
+    "importHours": "Uren importeren",
+    "importDescription": "Selecteer een week om de urenregistraties van chauffeurs te importeren",
+    "importMode": "Import modus",
+    "importAppend": "Toevoegen aan bestaande rijen",
+    "importReplace": "Bestaande rijen vervangen",
+    "importConfirm": "Importeren",
+    "noTimeEntries": "Geen urenregistraties gevonden",
+    "entriesFound": "registraties gevonden",
+    "selectWeek": "Selecteer week",
+    "noWeeksAvailable": "Geen weken met urenregistraties gevonden",
+    "week": "Week",
+    "period": "Periode",
+    "drivers": "Chauffeurs",
+    "entries": "Registraties",
+    "totalHours": "Totaal uren",
+    "totalKm": "Totaal km",
+    "backToWeeks": "Terug naar weken",
+    "loadingWeeks": "Weken ophalen..."
   }
 }
