--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -163,6 +163,7 @@
     "invoiceImport": "Invoice Import",
     "revenue": "Revenue",
     "spreadsheets": "Trip Registration",
+    "spreadsheetTemplates": "Spreadsheet Templates",
     "users": "Users",
     "settings": "Settings",
     "profile": "Profile"
