--- a/frontend/src/i18n/locales/nl.json
+++ b/frontend/src/i18n/locales/nl.json
@@ -163,6 +163,7 @@
     "invoiceImport": "Factuur Import",
     "revenue": "Omzet",
     "spreadsheets": "Ritregistratie",
+    "spreadsheetTemplates": "Spreadsheet Templates",
     "users": "Gebruikers",
     "settings": "Instellingen",
     "profile": "Profiel"
